--- a/src/components/Charts/Charts.scss
+++ b/src/components/Charts/Charts.scss
@@ -1,59 +1,59 @@
 .chart-content {
-  border: 2px solid #eee;
-  padding: 10px;
-  width: 25%;
-  height: 40%;
-  border-radius: 10px;
-  margin: 0 20px;
-  .chart-content-top {
-    height: 80%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+	border: 2px solid rgba(44, 41, 41, 0.979);
+	padding: 10px;
+	width: 25%;
+	height: 40%;
+	border-radius: 10px;
+	margin: 0 20px;
+	.chart-content-top {
+		height: 80%;
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: space-around;
 
-    & img {
-      width: 50%;
-      height: 100%;
-      mix-blend-mode: darken;
-    }
-    .chart-bar {
-      height: 100%;
-      width: 25%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+		& img {
+			width: 50%;
+			height: 100%;
+			mix-blend-mode: darken;
+		}
+		.chart-bar {
+			height: 100%;
+			width: 25%;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
 
-      &__inner {
-        height: 150px;
-        width: 25px;
-        border-radius: 5px;
-        background-color: rgb(255, 228, 237);
-        overflow: hidden;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-      }
-      &__fill {
-        background-color: rgb(255, 151, 151);
-        width: 100%;
-        transition: all 0.5s ease-out;
-      }
-      &__label {
-        font-weight: bold;
-        margin-top: 10px;
-        font-size: 18px;
-        text-align: center;
-        color: darkgray;
-      }
-    }
-  }
+			&__inner {
+				height: 100%;
+				width: 25px;
+				border-radius: 5px;
+				background-color: rgb(208, 200, 200);
+				overflow: hidden;
+				display: flex;
+				flex-direction: column;
+				justify-content: flex-end;
+			}
+			&__fill {
+				background-color: rgba(44, 41, 41, 0.979);
+				width: 100%;
+				transition: all 0.5s ease-out;
+			}
+			&__label {
+				font-weight: bold;
+				margin-top: 10px;
+				font-size: 18px;
+				text-align: center;
+				color: rgb(144, 131, 131);
+			}
+		}
+	}
 
-  .chart-content-bottom {
-    & p {
-      text-align: center;
-      font-size: 20px;
-      font-family: "Noto Sans Mono", monospace;
-    }
-  }
+	.chart-content-bottom {
+		& p {
+			text-align: center;
+			font-size: 20px;
+			font-family: "Noto Sans Mono", monospace;
+		}
+	}
 }
