--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,15 +1,25 @@
 .navbar-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: black;
-  height: 40px;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: black;
+	& h4 {
+		font-family: "Dancing Script", cursive;
+		color: #e5e5e5;
+		margin: 0 24px;
+		font-size: 17px;
+		letter-spacing: 6px;
+	}
+	.side-icon {
+		width: 32px;
+		height: 32px;
+		cursor: pointer;
 
-  & h4 {
-    font-family: "Dancing Script", cursive;
-    color: #e5e5e5;
-    margin: 0;
-    font-size: 17px;
-    letter-spacing: 6px;
-  }
+		&:hover {
+			transform: scale(1.1);
+			color: rgb(233, 224, 224);
+		}
+	}
 }
