--- a/src/pages/ChartsPage/ChartsPage.scss
+++ b/src/pages/ChartsPage/ChartsPage.scss
@@ -1,15 +1,8 @@
 .charts-page {
-  height: 100vh;
-  width: 100vw;
-  flex-direction: column;
-  display: flex;
-
-  .charts-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    height: calc(100vh - 40px);
-    width: 100%;
-  }
+	height: 100%;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
 }
