--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -1,16 +1,21 @@
 .table-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  letter-spacing: 1px;
-  margin-top: 24px;
-  height: calc((100vh - 40px) / 7 * 5);
-  .table-box {
-    gap: 3px;
-    font-family: "Noto Sans Mono", monospace;
-    width: 50%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-  }
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	letter-spacing: 1px;
+	height: 100%;
+	width: 100%;
+
+	.table-box {
+		gap: 3px;
+		font-family: "Noto Sans Mono", monospace;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-wrap: wrap;
+	}
+}
+
+.is-multiple {
+	margin-bottom: 100px;
 }
