--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -5,6 +5,28 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	& button {
+		font-size: 14px;
+		border: none;
+		border-bottom: 2px solid black;
+		background: transparent;
+		cursor: pointer;
+	}
+	.table-wrapper {
+		width: 50%;
+		overflow-y: auto;
+		margin: 24px 0;
+		height: calc((100vh - 40px) / 7 * 3.5);
+		&::-webkit-scrollbar {
+			width: 10px;
+		}
+		&::-webkit-scrollbar-track {
+			background: black;
+		}
+		&::-webkit-scrollbar-thumb {
+			background: #eee;
+		}
+	}
 	.img-container {
 		height: calc((100vh - 40px) / 7 * 2);
 		display: flex;
