--- a/src/components/Charts/Charts.scss
+++ b/src/components/Charts/Charts.scss
@@ -50,9 +50,11 @@
 	}
 
 	.chart-content-bottom {
+		display: flex;
+		align-items: center;
+		justify-content: space-around;
 		& p {
-			text-align: center;
-			font-size: 20px;
+			font-size: 16px;
 			font-family: "Noto Sans Mono", monospace;
 		}
 	}
